<resources>
    <string name="app_name">petTest1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="owner_register">Propietario del animal</string>
    <string name="vet_register">Vet Doctor</string>
    <string name="password_register">Contraseña</string>
    <string name="confirmPassword_regiser">Confirme contraseña</string>
    <string name="name_register">Nombre</string>
    <string name="lastName_register">Apellido</string>
    <string name="cellPhone_register">Telefono</string>
    <string name="email_register">Email</string>
    <string name="customer_register_datebirth">Birthday</string>
    <string name="customer_register_getbutton_birthday">Get day</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_username">Username is </string>
    <string name="register_iamdoctor">I am a Doctor</string>
    <string name="cedula_register">Cedula</string>
    <string name="home_button_pet">Mascotas</string>
    <string name="petMenu_addmodify_pet">AddUpdate</string>
    <string name="petMenu_remove_pet">Remove</string>
    <string name="addupdatePet_save">Save</string>
    <string name="addupdatePet_back">Back</string>
    <string name="addupdatePetName">Name</string>
    <string name="addupdatePetSex">Sex</string>
    <string name="addupdatePetSpecie">Specie</string>
    <string name="addupdatePetDatebirth">Birthday</string>
    <string name="login_exit">Exit</string>
    <string name="customer_home_doctors">Doctors</string>
</resources>