<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PetTest1.AppBarOverlay"/>

    <include layout="@layout/content_register" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:id="@+id/MainRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/RegisterVertLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textViewOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="true"
                android:hint="@string/owner_register" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_register"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirmPassword_regiser"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="true"
                android:hint="@string/name_register" />

            <EditText
                android:id="@+id/textViewLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="true"
                android:hint="@string/lastName_register" />

            <EditText
                android:id="@+id/editEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="true"
                android:hint="@string/email_register"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextCellPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cellPhone_register"
                android:inputType="phone" />

            <CheckBox
                android:id="@+id/registerDoctorCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_iamdoctor" />

            <EditText
                android:id="@+id/editTextCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cedula_register"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/layoutCalendarCustomRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCustomerRegisterBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_register_datebirth" />

                <Button
                    android:id="@+id/customerRegisterGetDateBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_register_getbutton_birthday" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/RegisterButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:onClick="buttonRegister"
                android:text="Register" />

            <Button
                android:id="@+id/buttonCustomerRegBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addupdatePet_back" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>